--- a/Mixo/UI/Search/View/SearchBar/SearchBar.xib
+++ b/Mixo/UI/Search/View/SearchBar/SearchBar.xib
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="SF-Pro-Rounded-Regular.otf">
-            <string>SFProRounded-Regular</string>
-        </array>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchBar" customModule="Mixo" customModuleProvider="target">
             <connections>
-                <outlet property="searchTextField" destination="BMF-C9-uT5" id="5eQ-CV-fgz"/>
+                <outlet property="searchBar" destination="tqN-bT-5Zz" id="LZn-Vu-Ka1"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -34,21 +28,19 @@
                                 <constraint firstAttribute="width" constant="18" id="WD9-Ix-f1T"/>
                             </constraints>
                         </imageView>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Artist or track name..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BMF-C9-uT5">
-                            <rect key="frame" x="48" y="10" width="351" height="24"/>
-                            <color key="textColor" red="0.13725490196078433" green="0.14509803921568626" blue="0.38823529411764707" alpha="1" colorSpace="calibratedRGB"/>
-                            <fontDescription key="fontDescription" name="SFProRounded-Regular" family="SF Pro Rounded" pointSize="15"/>
+                        <searchBar contentMode="redraw" searchBarStyle="prominent" placeholder="Artist or track name..." translatesAutoresizingMaskIntoConstraints="NO" id="tqN-bT-5Zz">
+                            <rect key="frame" x="38" y="10" width="361" height="24"/>
                             <textInputTraits key="textInputTraits"/>
-                        </textField>
+                        </searchBar>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="BMF-C9-uT5" secondAttribute="bottom" constant="10" id="5RA-aA-0E2"/>
-                        <constraint firstAttribute="trailing" secondItem="BMF-C9-uT5" secondAttribute="trailing" constant="15" id="Yyh-Oc-x8R"/>
-                        <constraint firstItem="BMF-C9-uT5" firstAttribute="top" secondItem="tcC-Vh-nqS" secondAttribute="top" constant="10" id="ekT-PF-DPG"/>
+                        <constraint firstAttribute="trailing" secondItem="tqN-bT-5Zz" secondAttribute="trailing" constant="15" id="8qc-PJ-uky"/>
+                        <constraint firstItem="tqN-bT-5Zz" firstAttribute="top" secondItem="tcC-Vh-nqS" secondAttribute="top" constant="10" id="9p3-Jd-WD8"/>
+                        <constraint firstItem="tqN-bT-5Zz" firstAttribute="leading" secondItem="zqT-Af-7HH" secondAttribute="trailing" constant="5" id="XJp-na-keH"/>
                         <constraint firstItem="zqT-Af-7HH" firstAttribute="leading" secondItem="tcC-Vh-nqS" secondAttribute="leading" constant="15" id="l4l-Vy-mqx"/>
                         <constraint firstItem="zqT-Af-7HH" firstAttribute="centerY" secondItem="tcC-Vh-nqS" secondAttribute="centerY" id="r0a-Vq-gd5"/>
-                        <constraint firstItem="BMF-C9-uT5" firstAttribute="leading" secondItem="zqT-Af-7HH" secondAttribute="trailing" constant="15" id="tuJ-Eg-QD0"/>
+                        <constraint firstAttribute="bottom" secondItem="tqN-bT-5Zz" secondAttribute="bottom" constant="10" id="x84-qO-h3H"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
